--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 --------------------------------------------------------------------------------
 sfdQC 1.0-0 (2018-06-18)
 --------------------------------------------------------------------------------
-o Initial release, with 0 functions: 
+o Initial release, with 
+o 0 functions 
+o 1 dataset: metier_lookup
