add benthis parameter table as dataset

--- a/NEWS
+++ b/NEWS
@@ -3,4 +3,4 @@ sfdQC 1.0-0 (2018-06-18)
 --------------------------------------------------------------------------------
 o Initial release, with 
 o 0 functions 
-o 1 dataset: metier_lookup
+o 2 dataset: metier_lookup, benthis
