--- a/NEWS
+++ b/NEWS
@@ -2,5 +2,6 @@
 sfdQC 1.0-0 (2018-06-18)
 --------------------------------------------------------------------------------
 o Initial release, with 
-o 0 functions 
-o 2 dataset: metier_lookup, benthis
+o 5 functions: data_coverage, gear_splits, make_polVMS, spatialplot, 
+               theme_icesqc
+o 2 datasets: metier_lookup, benthis
